<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">氧泡泡快递</string>
    <string name="title_activity_welcome">氧泡泡快递</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_path">PathActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string name="tab_scan">扫一扫</string>
    <string name="tab_find">发现</string>
    <string name="tab_profile">我</string>
    <string name="back">返回</string>

    <string name="network_not_available">请检查网络连接</string>
    <string name="pull_to_refresh_pull_label">下拉刷新...</string>
    <string name="pull_to_refresh_release_label">松开刷新...</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">点击加载...</string>

    <string name="activity">活动</string>
    <string name="popular">热门</string>
    <string name="nearby">周边</string>
    <string name="todo">开发中</string>
    <string name="load_failed">加载失败</string>
    <string name="backpress_to_exit">再按一次返回键退出</string>
    <string name="scan_result_tip">氧泡泡温馨提示：</string>
    <string name="verify_code_loading">查询中...</string>
    <string name="decoding_image">图片解析中...</string>
    <string name="decoding_failed">无法解析图片</string>
    <string name="copy">复制</string>
    <string name="copy_succeeded">复制成功</string>
    <string name="rfid_tip">请将手机靠近标签</string>

    <string name="yes">是</string>
    <string name="no">否</string>

    <string name="key_exist">该码已存在</string>

    <string name="product_name">产品名称</string>
    <string name="product_desc">商品描述</string>
    <string name="none">无</string>

    <!-- Profile -->
    <string name="profile_scan_num_title">扫描记录</string>
    <string name="pack_scan">包装快递扫描</string>
    <string name="pack_express_scan">包装快递扫描</string>
    <string name="path_scan">物流扫描</string>
    <string name="modify_package">修改包装</string>
    <string name="unpack_package">解除包装</string>
    <string name="sync_pack">同步包装</string>
    <string name="sync_path">同步物流</string>
    <string name="sync">同步</string>

    <string name="yunsoo_pack">氧泡泡打包</string>
    <string name="yunsoo_path">氧泡泡物流</string>

    <string name="off_line_upload">离线上传</string>
    <string name="wifi_upload">WIFI上传(推荐)</string>

    <string name="check_pack_repeat">该包装码已被扫描，请检查是否重复</string>

    <string name="settings">设置</string>
    <string name="login">登录</string>
    <string name="title_activity_my_scan_history">扫描记录</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_path_history">物流扫描历史</string>
    <string name="title_activity_packed_history">打包历史</string>
    <string name="title_activity_pack_detail">包内详情</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="date">日期：</string>
    <string name="hint">请先扫描箱码，然后扫描快递单号</string>
    <string name="per">个/箱</string>
    <string name="proceeding">打包进度：</string>
    <string name="please_scan_package_key">该包已装满，请扫描包装码</string>
    <string name="please_scan_product_key">请扫产品码</string>
    <string name="pack_count_now">已打包</string>
    <string name="build_pairs">已建立：</string>
    <string name="pack_count">计数：</string>
    <string name="count_unit">箱</string>
    <string name="pack_barcode">包装码：</string>
    <string name="pair">对</string>
    <string name="pack">包装</string>
    <string name="pack_2">箱</string>
    <string name="pack_3">打包</string>
    <string name="product_barcode">产品码</string>
    <string name="title_activity_fix_pack">FixPackActivity</string>
    <string name="fix_tip">请扫描需要修改的包装码</string>
    <string name="unpack_tip">请扫描需要解除的包装码</string>
    <string name="unpack_tip_des">说明：解除后包装后会删除文件对应的记录，解除后的包装和产品可到打包扫描界面重新打包。</string>
    <string name="file_not_found">文件%1$s已被移除，请在“/氧泡泡/包装文件”中查看</string>
    <string name="device_no_authorize"> 设备未授权,请扫描授权码</string>
    <string name="scan_authorize">扫码授权</string>
    <string name="scan_success">授权成功</string>
    <string name="authorize_failed">授权失败，请重新扫描</string>
    <string name="company_name">杭州氧泡泡生物科技有限公司</string>
    <string name="title_activity_authorize">AuthorizeActivity</string>
    <string name="scan_key_now">正在扫码：</string>
    <string name="revoke_operation">撤销操作</string>
    <string name="confirm_pack">强制打包</string>
    <string name="remove_product">剔除产品</string>
    <string name="pack_key_has_been_used">包装码已被打包</string>
    <string name="pack_key_has_exist">包装码已存在</string>
    <string name="express_key_has_exist">快递码已存在</string>

    <string name="cancel">取消</string>
    <string name="cancel_pack">返回，不想打包了</string>
    <string name="save">保存</string>
    <string name="title_activity_pack_main">PackMainActivity</string>
    <string name="title_activity_path_main">PathMainActivity</string>
    <string name="title_activity_pack_sync">PackSyncActivity</string>

    <string name="path_sync">同步物流</string>

    <string name="pack_sync">同步包装</string>
    <string name="title_activity_off_line_upload">OffLineUploadActivity</string>

    <string name="off_line_help">离线上传温馨提示：</string>
    <string name="off_line_step_1">1.使用USB线连接PDA设备和电脑</string>
    <string name="off_line_step_2">2.将SD卡/yunsu/pack/sync_task的文件拷贝至电脑</string>
    <string name="off_line_step_3">3.将SD卡/yunsu/pack/sync_task中的文件移至/yunsoo/pack/sync_success中</string>

    <string name="offline_path_step_2">2.将SD卡/yunsu/path/sync_task的文件拷贝至电脑</string>
    <string name="offline_path_step_3">3.将SD卡/yunsu/path/sync_task中的文件移至/yunsoo/path/sync_success中</string>

    <string name="has_no_pack_sync">没有包装需要同步哦，先去打包吧</string>
    <string name="has_no_path_sync">没有物流需要同步哦，开始扫描吧</string>

    <string name="fix_finish">修改完成</string>
    <string name="title_activity_path_sync">PathSyncActivity</string>
    <string name="title_activity_global_setting">GlobalSettingActivity</string>

    <string name="authorize_status">是否授权</string>
    <string name="clear_cache">清除历史数据</string>
    <string name="current_version">当前版本</string>

    <string name="cancel_authorize">取消授权</string>
    <string name="not_authorize">PDA授权已被取消</string>
    <string name="cancel_authorize_message">当前PDA的打包和物流功能将不可用，需要重新回到授权界面进行授权</string>
    <string name="not_authorize_message">当前PDA的授权已在服务平台取消，需要重新回到授权界面进行授权</string>
    <string name="confirm">确认</string>
    <string name="confirm_cancel_authorize">解除授权</string>
    <string name="title_activity_org_agency">OrgAgencyActivity</string>

    <string name="auto_sync">自动同步时间</string>
    <string name="default_auto_inbound">默认自动入库</string>
    <string name="cancel_auto_inbound">打包完成后的包装将不再默认自动入库</string>
    <string name="confirm_auto_inbound">打包完成后的包装将默认自动入库</string>


    <string name="choose_org_agency">选择经销商</string>
    <string name="please_input_sync_rate">自动同步时间（120分钟内）</string>
    <string name="minute">分钟</string>
    <string name="every">每隔</string>

    <!--PackSettingActivity-->
    <string name="staff">操作人</string>
    <string name="staff_2">操作人：</string>
    <string name="staff_hint">请选择操作人</string>
    <string name="product">产品</string>
    <string name="product_2">产品：</string>
    <string name="product_hint">请选择产品</string>
    <string name="pack_setting">打包设置</string>
    <string name="standard">规格：</string>
    <string name="standard2">规格</string>

    <string name="start_pack">开始打包</string>
    <string name="set_pack_standard">请先设置打包规格</string>
    <string name="set_staff">请先设置操作人</string>
    <string name="set_product">请先选择产品</string>
    <string name="set_standard">设置规格</string>

    <!--StaffListActivity-->
    <string name="staff_list">操作人列表</string>
    <string name="create_new_staff">暂无操作员，请先创建操作员</string>
    <string name="create">创建</string>
    <string name="confirm_create">确认创建</string>
    <string name="staff_name">职工姓名</string>
    <string name="staff_number">职工编号</string>
    <string name="number_not_null">职工编号不能为空</string>
    <string name="name_not_null">职工姓名不能为空</string>
    <string name="fill_tip">必填</string>
    <string name="exist_pack_data">已存在相关打包数据，不能删除此条记录</string>
    <string name="create_staff">创建操作人</string>

    <!--ProductListActivity-->
    <string name="product_list">产品列表</string>
    <string name="create_new_product">暂无产品信息，请先创建产品</string>
    <string name="product_number">产品编号</string>
    <string name="product_base_name">产品名称</string>
    <string name="product_number_not_null">产品编号不能为空</string>
    <string name="product_name_not_null">产品名称不能为空</string>
    <string name="create_product">创建产品</string>

    <!--KeypatternListActivity-->
    <string name="key_pattern_name">名称</string>
    <string name="express">表达式</string>
    <string name="example">示例</string>
    <string name="temple_list">模板列表</string>


    <!--<scanActivity>-->
    <string name="product_key_exist_in_this_pack">该产品码已存在于当前包装中</string>
    <string name="scan_pack_key">请扫包装码</string>
    <string name="scan_express_key">请扫快递码</string>
    <string name="pack_key">包装码：</string>
    <string name="pack_finish">打包完成</string>
    <string name="press_back_button">取消关联，请按返回键</string>


    <!--revokeAcitity-->
    <string name="scan_revoke_product_key">请扫描需要剔除的产品码</string>
    <string name="revoke_product">撤销产品</string>
    <string name="remain_product">剩余产品：</string>
    <string name="revoke_now">正在剔除：</string>
    <string name="product_not_in_pack">该产品不在此包装中，请检查</string>
    <string name="has_no_one_in_pack">该包装内已无产品，是否回到打包扫描页面？</string>

    <!--fixPack-->
    <string name="fix_pack_done">修改完成</string>
    <string name="new_product">新产品：</string>
    <string name="fix_pack">修改包装</string>
    <string name="not_find_pack">包装码不存在</string>
    <string name="pack_fill_up">该包已被装满，如需新增产品，请先撤销</string>
    <string name="pack_fix_summary">包装原有产品%1$d个，现有产品%2$d个，其中新增%3$d个，删除%4$d个</string>
    <string name="click_wrong">点错了,不返回</string>
    <string name="still_go_back">仍要返回</string>
    <string name="want_to_to_back">确认返回吗？</string>
    <string name="please_scan_new_product_key">请扫描需要新增的产品码</string>
    <string name="product_key">产品码：</string>

    <!--report-->
    <string name="pack_total_count">包装总数</string>
    <string name="product_total_count">产品总数</string>
    <string name="staff_pack_count">包装计数</string>
    <string name="staff_product_count">产品计数</string>

    <string name="data_report">数据报表</string>


    <!--GlobalSetting-->
    <string name="product_key_type">快递码类型</string>
    <string name="pack_key_type">包装码类型</string>
    <string name="choose_product_key_type">请选择产品码类型</string>
    <string name="choose_pack_key_type">请选择包装码类型</string>
    <string name="update_setting">更新设置</string>
    <string name="scan_update_setting_key">请扫描更新设置的二维码</string>
    <string name="update_wrong">更新设置的二维码不正确</string>
    <string name="update_success">更新设置成功</string>
    <string name="device_code">设备编号</string>

    <!--createKeyTemple-->
    <string name="temple_name">模板名称</string>
    <string name="key_example">码示例</string>
    <string name="key_prefix">码前缀</string>
    <string name="temple_name_instance">如:氧泡泡官方码</string>
    <string name="key_example_instance">如：http://dev.yunsu.co:7080/fBC8IFwlR9K65E87Udt86x</string>
    <string name="key_prefix_instance">如：http://dev.yunsu.co:7080/</string>
    <string name="create_key_temple">创建码模板</string>
    <string name="temple_name_not_null">码模板名称不能为空</string>
    <string name="key_example_not_null">码示例不能为空</string>
    <string name="key_prefix_not_null">码前缀不能为空</string>

    <string name="not_verify_pack_key">扫码非官方认证包装码</string>

    <string name="not_verify_product_key">扫码非官方认证产品码</string>

</resources>
