<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yunsu.activity.FixPackActivity">

    <com.yunsu.common.view.TitleBar
        android:id="@+id/fix_title_bar"
        layout="@layout/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:id="@+id/rl_total_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fix_title_bar"
        android:visibility="invisible"
        >
        <LinearLayout
            android:id="@+id/ll_staff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_bg_bottom_fix_pack"
            android:layout_alignParentTop="true"
            android:orientation="horizontal" >

            <TextView
                style="@style/text_style_normal"
                android:text="@string/staff_2"
                />

            <TextView
                android:id="@+id/tv_staff"
                style="@style/text_style_normal"
                android:text="张三" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_bg_bottom_fix_pack"
            android:layout_below="@id/ll_staff"
            android:orientation="horizontal"
            >

            <TextView
                style="@style/text_style_normal"
                android:text="@string/standard"
                />

            <TextView
                android:id="@+id/tv_standard"
                style="@style/text_style_normal"
                android:text="5" />

            <TextView
                style="@style/text_style_normal"
                android:text="@string/per"
                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_bg_bottom_fix_pack"
            android:layout_below="@id/ll_standard"
            android:orientation="horizontal"
            >

            <TextView
                style="@style/text_style_normal"
                android:text="@string/product_2"
                />

            <TextView
                android:id="@+id/tv_product"
                style="@style/text_style_normal"
                android:text="哇哈哈" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_pack_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_product"
            android:background="@drawable/item_bg_bottom_fix_pack"
            android:orientation="horizontal">

            <TextView
                android:text="@string/pack_barcode"
                style="@style/text_style_normal"
                />
            <TextView
                android:id="@+id/tv_pack_key_in_title"
                style="@style/text_style_normal"
                />

        </LinearLayout>






        <LinearLayout
            android:id="@+id/ll_progress_info"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_pack_key"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:gravity=""
            >
            <TextView
                style="@style/text_style_normal"
                android:text="@string/proceeding"
                />
            <TextView
                android:id="@+id/tv_product_count"
                style="@style/text_style_biggest"
                android:text="5"
                android:textColor="#10f089"
                />
            <TextView
                style="@style/text_style_biggest"
                android:text="/"
                android:textColor="#f16969"
                />
            <TextView
                android:id="@+id/tv_standard_in_progress"
                style="@style/text_style_biggest"
                android:text="10"
                />
        </LinearLayout>


        <ProgressBar
            android:id="@+id/progressBar1"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_progress_info"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_scan_error_tip"
            style="@style/text_style_normal"
            android:layout_below="@+id/progressBar1"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            />

        <LinearLayout
            android:id="@+id/ll_scan_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/progressBar1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            >

            <TextView
                style="@style/text_style_normal"
                android:text="@string/product_key"
                />
            <TextView
                android:id="@+id/tv_scan_key"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:lines="2"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

         <ImageView
             android:id="@+id/iv_scan_key_small"
            android:layout_below="@+id/ll_scan_key"
            android:src="@drawable/ic_scan"
            android:layout_width="60dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/iv_scan_key_small"
            android:text="@string/please_scan_new_product_key"
            style="@style/text_style_normal"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            >

            <Button
                android:id="@+id/btn_revoke"
                android:text="@string/remove_product"
                android:background="@drawable/btn_no_corner_bg"
                android:textColor="@color/clear_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_weight="0.5"
                />

            <View
                android:background="@color/app_bg_color"
                android:layout_width="2dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/btn_fix_pack_done"
                android:text="@string/fix_pack_done"
                android:background="@drawable/btn_no_corner_bg"
                android:textColor="@color/clear_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="10dp"
                />

        </LinearLayout>


        <EditText
            android:id="@+id/et_get_pack_key"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text=" "/>

    </RelativeLayout>



    <LinearLayout
        android:id="@+id/ll_fix_tip"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:visibility="visible"
        >
        <ImageView
            android:src="@drawable/ic_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_fix_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:visibility="visible"
            android:text="@string/fix_tip"
            />

        <EditText
            android:id="@+id/et_get_pack_key_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text=" "/>

    </LinearLayout>

</RelativeLayout>
