<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PackScanActivity" >
    
    <com.yunsu.common.view.TitleBar
        android:id="@+id/title_bar"
        layout="@layout/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/ll_has_pack_count"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:background="@drawable/item_bg_bottom_normal"
        >

        <TextView
            style="@style/text_style_normal"
            android:textSize="30sp"
            android:text="@string/build_pairs" />

        <TextView
            android:id="@+id/tv_pair_count"
            style="@style/text_style_normal"
            android:textSize="30sp"
            android:text="0"
            />

        <TextView
            style="@style/text_style_normal"
            android:textSize="30sp"
            android:text="@string/pair" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_date"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_has_pack_count"
        android:background="@drawable/item_bg_bottom_normal"
        >

        <TextView
            style="@style/text_style_normal"
            android:textSize="30sp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/text_style_normal"
            android:textSize="30sp"
            />


    </LinearLayout>


    
    <EditText
        android:id="@+id/et_get_pack_key"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_below="@id/title_bar"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:gravity="center_horizontal"
        />





    <LinearLayout
        android:id="@+id/ll_scan_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ll_date"
        android:visibility="invisible"
        >

        <TextView
            style="@style/text_style_normal"
            android:text="@string/scan_key_now"
            />
        <TextView
            android:id="@+id/tv_scan_key"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lines="2"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/ll_scan_key"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        >
        <ImageView
            android:src="@drawable/ic_scan"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:text="@string/hint"
            style="@style/text_style_normal"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>




</RelativeLayout>