<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_root_create_product"
    tools:context="com.yunsu.activity.CreateProductBaseActivity">

    <com.yunsu.common.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        ></com.yunsu.common.view.TitleBar>

    <RelativeLayout
        android:id="@+id/rl_temple_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_bg_normal"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:text="@string/product_name"
            android:textColor="#ff484e43"
            android:textSize="16.0dp" />

        <EditText
            android:id="@+id/et_product_name"
            android:layout_alignParentRight="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/fill_tip"
            android:gravity="center"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_key_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_temple_name"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_bg_normal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:text="@string/product_number"
            android:textColor="#ff484e43"
            android:textSize="16.0dp" />

        <EditText
            android:id="@+id/et_product_number"
            android:layout_alignParentRight="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/fill_tip"
            android:gravity="center"
            android:inputType="number"
            />


    </RelativeLayout>


    <Button
        android:id="@+id/btn_create_product"
        android:text="@string/confirm_create"
        android:layout_below="@+id/rl_key_example"
        android:textColor="@color/white"
        android:background="@drawable/btn_bg"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content" />

</RelativeLayout>
